--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
@@ -25,7 +25,7 @@
         <!-- Table -->
         <div class="table-responsive">
             <table class="table table-bordered align-middle text-center" id="giangVienTable">
-                <thead class="table-light">
+                <thead class="table-primary text-center">
                     <tr>
                         <th style="width: 50px;"><input type="checkbox" id="checkAll" /></th>
                         <th>Mã Giảng Viên</th>
