--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
@@ -24,7 +24,7 @@
         <!-- Table -->
         <div class="table-responsive">
             <table class="table table-bordered align-middle text-center" id="hocVienTable">
-                <thead class="table-light">
+                <thead class="table-primary text-center">
                     <tr>
                         <th style="width: 50px;"><input type="checkbox" id="checkAll" /></th>
                         <th>STT</th>
