--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Index.cshtml
@@ -24,8 +24,8 @@
 
         <!-- Table List View -->
         <div class="table-responsive">
-            <table class="table table-bordered table-hover align-middle text-center" id="courseTable">
-                <thead class="table-dark">
+            <table class="table table-bordered align-middle" id="courseTable">
+                <thead class="table-primary text-center">
                     <tr>
                         <th style="width: 50px;"><input type="checkbox" id="checkAll" /></th>
                         <th>STT</th>
